--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/home/gibran/snap/netbeans/76/build.properties
+user.properties.file=/home/opc/.netbeans/17/build.properties
